--- a/duui-ner-ort/Cargo.toml
+++ b/duui-ner-ort/Cargo.toml
@@ -19,3 +19,5 @@ rust_tokenizers = "8.1.1"
 serde = "1.0.197"
 serde_json = "1.0.114"
 thiserror = "1.0.57"
+utoipa = { version = "4", features = ["actix_extras"] }
+utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }
