--- a/duui-ner-ort/Cargo.toml
+++ b/duui-ner-ort/Cargo.toml
@@ -11,6 +11,7 @@ actix-files = "0.6.5"
 actix-web = "4.5.1"
 anyhow = "1.0.80"
 clap = { version = "4.5.1", features = ["derive"] }
+env_logger = "0.11.2"
 ndarray = "0.15.6"
 ndarray-stats = "0.5.1"
 rayon = "1.9.0"
