--- a/duui-ner-ort/Cargo.toml
+++ b/duui-ner-ort/Cargo.toml
@@ -15,8 +15,8 @@ env_logger = "0.11.2"
 ndarray = "0.15.6"
 ndarray-stats = "0.5.1"
 rayon = "1.9.0"
-rust-bert = { git = "https://github.com/guillaume-be/rust-bert.git", rev = "29f9a7a0ff832c742db919cbc6fd0b9c865a98ae" }
-rust_tokenizers = "8.1.1"
+rust-bert = { version = "0.22.0" }
+rust_tokenizers = "*"
 serde = "1.0.197"
 serde_json = "1.0.114"
 thiserror = "1.0.57"
