--- a/duui-llama-cpp-python/src/variants/llama-3/Dockerfile
+++ b/duui-llama-cpp-python/src/variants/llama-3/Dockerfile
@@ -1,10 +1,10 @@
-# FROM docker.texttechnologylab.org/llm/hf:latest as fetch
+FROM docker.texttechnologylab.org/llm/hf:latest as fetch
 
-# RUN huggingface-cli download NousResearch/Meta-Llama-3-8B-Instruct-GGUF Meta-Llama-3-8B-Instruct-Q5_K_M.gguf
+RUN huggingface-cli download NousResearch/Meta-Llama-3-8B-Instruct-GGUF Meta-Llama-3-8B-Instruct-Q5_K_M.gguf
 
-FROM docker.texttechnologylab.org/llm/llama-cpp-python:latest as component
-# COPY --from=fetch /root/.cache/huggingface/hub /root/.cache/huggingface/hub
-COPY --from=docker.texttechnologylab.org/llm/llama-cpp-python/llama-3:0.0.1 /root/.cache/huggingface/hub /root/.cache/huggingface/hub
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/base:latest as component
+COPY --from=fetch /root/.cache/huggingface/hub /root/.cache/huggingface/hub
+COPY --from=docker.texttechnologylab.org/llm/llama-cpp-python:latest /app/ /app/
 
 WORKDIR /app/
 COPY ./config.json /app/
