--- a/duui-llama-cpp-python/src/variants/mixtral-8x7b_llama-3/Dockerfile
+++ b/duui-llama-cpp-python/src/variants/mixtral-8x7b_llama-3/Dockerfile
@@ -1,16 +1,15 @@
-# FROM docker.texttechnologylab.org/llm/hf:latest as fetch-llama
+FROM docker.texttechnologylab.org/llm/hf:latest as fetch-llama
 
-# RUN huggingface-cli download NousResearch/Meta-Llama-3-8B-Instruct-GGUF Meta-Llama-3-8B-Instruct-Q5_K_M.gguf
+RUN huggingface-cli download NousResearch/Meta-Llama-3-8B-Instruct-GGUF Meta-Llama-3-8B-Instruct-Q5_K_M.gguf
 
-# FROM docker.texttechnologylab.org/llm/hf:latest as fetch-mixtral
+FROM docker.texttechnologylab.org/llm/hf:latest as fetch-mixtral
 
-# RUN huggingface-cli download TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF mixtral-8x7b-instruct-v0.1.Q5_K_M.gguf
+RUN huggingface-cli download TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF mixtral-8x7b-instruct-v0.1.Q5_K_M.gguf
 
-FROM docker.texttechnologylab.org/llm/llama-cpp-python:latest as component
-# COPY --from=fetch-llama /root/.cache/huggingface/hub /root/.cache/huggingface/hub
-COPY --from=docker.texttechnologylab.org/llm/llama-cpp-python/llama-3:0.0.1 /root/.cache/huggingface/hub /root/.cache/huggingface/hub
-# COPY --from=fetch-mixtral /root/.cache/huggingface/hub /root/.cache/huggingface/hub
-COPY --from=docker.texttechnologylab.org/llm/llama-cpp-python/mixtral-8x7b:0.0.1 /root/.cache/huggingface/hub /root/.cache/huggingface/hub
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/base:latest as component
+COPY --from=fetch-llama /root/.cache/huggingface/hub /root/.cache/huggingface/hub
+COPY --from=fetch-mixtral /root/.cache/huggingface/hub /root/.cache/huggingface/hub
+COPY --from=docker.texttechnologylab.org/llm/llama-cpp-python:latest /app/ /app/
 
 WORKDIR /app/
 COPY ./config.json /app/
