--- a/duui-llama-cpp-python/src/variants/tinyllama-1.1b/Dockerfile
+++ b/duui-llama-cpp-python/src/variants/tinyllama-1.1b/Dockerfile
@@ -1,7 +1,9 @@
+# build layer for fetching the model that may be reused
 FROM docker.texttechnologylab.org/llm/hf:latest as fetch
 
-RUN huggingface-cli download TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF mixtral-8x7b-instruct-v0.1.Q5_K_M.gguf
+RUN huggingface-cli download TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF tinyllama-1.1b-chat-v1.0.Q2_K.gguf
 
+# build layer for the actual component
 FROM docker.texttechnologylab.org/llm/llama-cpp-python:latest as component
 COPY --from=fetch /root/.cache/huggingface/hub /root/.cache/huggingface/hub
 
