--- a/duui-llama-cpp-python/src/variants/mixtral-8x7b_llama-3/config.json
+++ b/duui-llama-cpp-python/src/variants/mixtral-8x7b_llama-3/config.json
@@ -5,6 +5,7 @@
       "hf_model_repo_id": "NousResearch/Meta-Llama-3-8B-Instruct-GGUF",
       "model_alias": "llama-3-8b",
       "chat_format": "llama-3",
+      "n_gpu_layers": -1,
       "n_ctx": 8192
     },
     {
@@ -12,7 +13,8 @@
       "hf_model_repo_id": "TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF",
       "model_alias": "mixtral-8x7b",
       "chat_format": "mistral-instruct",
-      "n_ctx": 32768
+      "n_gpu_layers": -1,
+      "n_ctx": 8192
     }
   ]
 }
