feat: Updated deps & base images

--- a/duui-llama-cpp-python/src/main/docker/Dockerfile.base
+++ b/duui-llama-cpp-python/src/main/docker/Dockerfile.base
@@ -1,14 +1,16 @@
-ARG VERSION="0.1.0"
-FROM docker.texttechnologylab.org/llm/llama-cpp-python/base:${VERSION}
+ARG VERSION
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/deps:${VERSION} as setup
 
-ENV HOST="0.0.0.0"
-ENV PORT="9714"
+ENV HOST 0.0.0.0
+ENV PORT 9714
 ENV SSL_KEYFILE=
 ENV SSL_CERTFILE=
-ENV CONFIG_FILE="/app/config.json"
+ENV CONFIG_FILE /app/config.json
+
+FROM setup as component
 
 WORKDIR /app/
 COPY ./src/main/python/ /app/
+COPY ./src/main/lua/communication_layer.lua /app/
 
 CMD gunicorn wsgi:app -b ${HOST}:${PORT} -k uvicorn.workers.UvicornWorker
-# ENTRYPOINT --keyfile ${SSL_KEYFILE} --certfile ${SSL_CERTFILE}
