--- a/duui-llama-cpp-python/src/variants/with-mounts/Dockerfile
+++ b/duui-llama-cpp-python/src/variants/with-mounts/Dockerfile
@@ -1,4 +1,11 @@
-FROM docker.texttechnologylab.org/llm/llama-cpp-python:latest as component
+ARG VERSION="latest"
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/base:${VERSION}
+
+ENV HOST 0.0.0.0
+ENV PORT 9714
+ENV SSL_KEYFILE=
+ENV SSL_CERTFILE=
+ENV CONFIG_FILE /app/config.json
 
 WORKDIR /app/
 COPY ./config.json /app/
