--- a/duui-llama-cpp-python/src/variants/tinyllama-1.1b/config.json
+++ b/duui-llama-cpp-python/src/variants/tinyllama-1.1b/config.json
@@ -3,7 +3,14 @@
         {
             "model": "tinyllama-1.1b-chat-v1.0.Q2_K.gguf",
             "hf_model_repo_id": "TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF",
-            "model_alias": "tinyllama-1.1b",
+            "model_alias": "tinyllama-1.1b-q2k",
+            "n_gpu_layers": -1,
+            "offload_kqv": true
+        },
+        {
+            "model": "tinyllama-1.1b-chat-v1.0.Q3_K_S.gguf",
+            "hf_model_repo_id": "TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF",
+            "model_alias": "tinyllama-1.1b-q3ks",
             "n_gpu_layers": -1,
             "offload_kqv": true
         }
