--- a/duui-llama-cpp-python/src/variants/tinyllama-1.1b/Dockerfile
+++ b/duui-llama-cpp-python/src/variants/tinyllama-1.1b/Dockerfile
@@ -1,20 +1,21 @@
-ARG VERSION="latest"
+ARG CUDA_VERSION="cu124"
+ARG BASE_VERSION="latest"
 # base layer for the component
-FROM docker.texttechnologylab.org/llm/llama-cpp-python/base:${VERSION} as base
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/${CUDA_VERSION}/base:${BASE_VERSION} as base
 
 # layer(s) for fetching the model that may be reused
-FROM docker.texttechnologylab.org/llm/hf:latest as fetch-q2k
+FROM docker.texttechnologylab.org/llm/hf:latest as tinyllama-q2k
 RUN huggingface-cli download TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF tinyllama-1.1b-chat-v1.0.Q2_K.gguf
 
-FROM docker.texttechnologylab.org/llm/hf:latest as fetch-q3ks
+FROM docker.texttechnologylab.org/llm/hf:latest as tinyllama-q3ks
 RUN huggingface-cli download TheBloke/TinyLlama-1.1B-Chat-v1.0-GGUF tinyllama-1.1b-chat-v1.0.Q3_K_S.gguf
 
 # final layer for the actual component
-FROM docker.texttechnologylab.org/llm/llama-cpp-python/deps:${VERSION} as component
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/${CUDA_VERSION}/deps:${BASE_VERSION} as component
 
 # copy fetched model(s)
-COPY --from=fetch-q2k /root/.cache/huggingface/hub /root/.cache/huggingface/hub
-COPY --from=fetch-q3ks /root/.cache/huggingface/hub /root/.cache/huggingface/hub
+COPY --from=tinyllama-q2k /root/.cache/huggingface/hub /root/.cache/huggingface/hub
+COPY --from=tinyllama-q3ks /root/.cache/huggingface/hub /root/.cache/huggingface/hub
 
 # copy app code from base layer
 COPY --from=base /app/ /app/
