--- a/duui-llama-cpp-python/src/variants/mixtral-8x7b/Dockerfile
+++ b/duui-llama-cpp-python/src/variants/mixtral-8x7b/Dockerfile
@@ -1,10 +1,12 @@
-ARG VERSION="latest"
-FROM docker.texttechnologylab.org/llm/llama-cpp-python/base:${VERSION} as base
+ARG CUDA_VERSION="cu124"
+ARG BASE_VERSION="latest"
+# base layer for the component
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/${CUDA_VERSION}/base:${BASE_VERSION} as base
 
 FROM docker.texttechnologylab.org/llm/hf:latest as fetch
 RUN huggingface-cli download TheBloke/Mixtral-8x7B-Instruct-v0.1-GGUF mixtral-8x7b-instruct-v0.1.Q5_K_M.gguf
 
-FROM docker.texttechnologylab.org/llm/llama-cpp-python/deps:${VERSION} as component
+FROM docker.texttechnologylab.org/llm/llama-cpp-python/${CUDA_VERSION}/deps:${BASE_VERSION} as component
 COPY --from=fetch /root/.cache/huggingface/hub /root/.cache/huggingface/hub
 COPY --from=base /app/ /app/
 
