--- a/duui-slc-spacy/src/main/docker/Dockerfile.base
+++ b/duui-slc-spacy/src/main/docker/Dockerfile.base
@@ -2,16 +2,17 @@ ARG CUDA_VERSION="12.4.1"
 
 FROM ghcr.io/mamba-org/micromamba:jammy-cuda-${CUDA_VERSION}
 
-RUN micromamba install -y -n base -c conda-forge spacy cupy \
+RUN micromamba install -y -n base -c conda-forge spacy=3.7.3 cupy fastapi=0.110.3 uvicorn=0.30.1 gunicorn=22.0.0 \
     && micromamba clean --all --yes
 
 ARG MAMBA_DOCKERFILE_ACTIVATE=1
 ENV PATH=/opt/conda/bin/:$PATH
 
 RUN python -m spacy download en_core_web_sm \
-    && python -m spacy download de_core_news_sm \
-    && python -m spacy download en_core_web_trf \
-    && python -m spacy download de_core_news_trf
+    && python -m spacy download de_core_news_sm
+
+# RUN python -m spacy download en_core_web_trf \
+#     && python -m spacy download de_core_news_trf
 
 HEALTHCHECK CMD python -m spacy validate
 
