--- a/duui-slc-spacy/justfile
+++ b/duui-slc-spacy/justfile
@@ -1,17 +1,17 @@
-export VERSION := "0.0.4"
+set allow-duplicate-recipes := true
+set allow-duplicate-variables := true
+
+import? '../duui-slc-base/justfile'
+
+export VERSION := "0.1.0"
+
 export REPOSITORY := "docker.texttechnologylab.org"
 export BASE_NAME := "duui-slc-spacy"
-
-base version=VERSION:
-    docker build \
-        --build-arg CUDA_VERSION="12.4.1" \
-        -t {{REPOSITORY}}/{{BASE_NAME}}/cu124/base:{{version}} \
-        -f src/main/docker/Dockerfile.base src/main/
 
 build version=VERSION:
     just base {{version}}
     docker build \
-        --build-arg CUDA_VERSION="cu124" \
+        --build-arg CUDA_NAME="cu124" \
         --build-arg BASE_VERSION="{{version}}" \
         -t {{REPOSITORY}}/{{BASE_NAME}}/cu124:{{version}} \
         -f src/main/docker/Dockerfile src/main/
