--- a/duui-slc/base/justfile
+++ b/duui-slc/base/justfile
@@ -1,11 +1,11 @@
-export VERSION := "0.1.0"
+export VERSION := "0.1.1"
 export REPOSITORY := "docker.texttechnologylab.org"
 
 base version=VERSION:
     docker build \
         --build-arg CUDA_VERSION="12.4.1" \
         -t {{REPOSITORY}}/duui-slc-base/cu124:{{version}} \
-        -f ../duui-slc-base/src/main/docker/Dockerfile ../duui-slc-base/src/main/
+        -f ../base/src/main/docker/Dockerfile ../base/src/main/
 
 tag version=VERSION as="latest":
     docker tag {{REPOSITORY}}/duui-slc-base/cu124:{{version}} {{REPOSITORY}}/duui-slc-base/cu124:latest
