--- a/duui-slc/spacy/justfile
+++ b/duui-slc/spacy/justfile
@@ -1,9 +1,9 @@
 set allow-duplicate-recipes := true
 set allow-duplicate-variables := true
 
-import? '../duui-slc-base/justfile'
+import? '../base/justfile'
 
-export VERSION := "0.1.0"
+export VERSION := "0.1.1"
 
 export REPOSITORY := "docker.texttechnologylab.org"
 export BASE_NAME := "duui-slc-spacy"
