--- a/duui-slc/base/justfile
+++ b/duui-slc/base/justfile
@@ -1,14 +1,18 @@
-export VERSION := "0.1.1"
+export CUDA_NAME := "cu124"
+export CUDA_VERSION := "12.4.1"
+
+export VERSION := "0.2.0"
+
 export REPOSITORY := "docker.texttechnologylab.org"
 
 base version=VERSION:
     docker build \
         --build-arg CUDA_VERSION="12.4.1" \
-        -t {{REPOSITORY}}/duui-slc-base/cu124:{{version}} \
+        -t {{REPOSITORY}}/duui-slc-base/{{CUDA_NAME}}:{{version}} \
         -f ../base/src/main/docker/Dockerfile ../base/src/main/
 
 tag version=VERSION as="latest":
-    docker tag {{REPOSITORY}}/duui-slc-base/cu124:{{version}} {{REPOSITORY}}/duui-slc-base/cu124:latest
+    docker tag {{REPOSITORY}}/duui-slc-base/{{CUDA_NAME}}:{{version}} {{REPOSITORY}}/duui-slc-base/{{CUDA_NAME}}:latest
 
 push version=VERSION:
-    docker push {{REPOSITORY}}/duui-slc-base/cu124:{{version}}
+    docker push {{REPOSITORY}}/duui-slc-base/{{CUDA_NAME}}:{{version}}
