--- a/duui-slc/spacy/justfile
+++ b/duui-slc/spacy/justfile
@@ -16,11 +16,12 @@ build version=VERSION:
     docker build \
         --build-arg CUDA_NAME="{{CUDA_NAME}}" \
         --build-arg CUDA_VERSION="{{CUDA_VERSION}}" \
-        --build-arg BASE_VERSION="{{VERSION}}" \
+        --build-arg VERSION="{{VERSION}}" \
         -t {{REPOSITORY}}/{{BASE_NAME}}/{{CUDA_NAME}}:{{version}} \
         -f src/main/docker/Dockerfile src/main/
 
 test version=VERSION:
+    just build {{version}}
     docker container ls | grep {{BASE_NAME}}-test && docker stop {{BASE_NAME}}-test && docker rm {{BASE_NAME}}-test || echo ""
     docker run --rm --name {{BASE_NAME}}-test -d -p 9714:9714 {{REPOSITORY}}/{{BASE_NAME}}/{{CUDA_NAME}}:{{version}}
     sleep 2 && mvn test || echo "Tests failed"
